appId: com.rotmansells.vseprozhar
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible:
      id: customer-menu-screen
    timeout: 15000
- extendedWaitUntil:
    visible: '🍴 Категория A Product E2E'
    timeout: 15000
- tapOn: '🍴 Категория A Product E2E'
- extendedWaitUntil:
    visible: 'Продукт A E2E'
    timeout: 15000
- assertVisible: '450₽'
- assertNotVisible: 'Продукт B E2E'
- tapOn: '🍴 Категория B Product E2E'
- extendedWaitUntil:
    visible: 'Продукт B E2E'
    timeout: 15000
- assertNotVisible: 'Продукт A E2E'
- stopApp
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: '🍴 Категория A Product E2E'
    timeout: 15000
- tapOn: '🍴 Категория A Product E2E'
- extendedWaitUntil:
    visible: 'Продукт A E2E'
    timeout: 15000
- assertVisible: '450₽'
- assertNotVisible: 'Продукт B E2E'
